<resources>
    <string name="app_name">MaterialDesign</string>

    <!-- General -->
    <string name="labelButtonReturnToMainActivity">Return to menu</string>
    <string name="labelButtonShowInformation">Show data</string>

    <!-- MainActivity -->
    <string name="txtPresentation">Estudos - Material Design</string>
    <string name="labelButtonFloatingActionButton">Float Action Button</string>
    <string name="labelButtonSingleTextField">Single Text Field</string>
    <string name="labelButtonMultiLineText">Multi Line Text</string>
    <string name="labelButtonFullWidthText">Full Width Text</string>
    <string name="labelButtonFloatingLabels">Floating Labels</string>
    <string name="labelButtonUserInputErrors">User Input Errors</string>
    <string name="labelButtonCharacterCounter">Character Counter</string>
    <string name="labelButtonPasswordToggle">Password Toggle</string>
    <string name="labelButtonDialog">Dialog</string>
    <string name="labelButtonSnackBarsAndToasts">Snack Bars / Toasts</string>
    <string name="labelButtonCards">Cards</string>
    <string name="labelButtonToolbars">Toolbars</string>

    <!-- FloatingActionButtonActivity -->
    <string name="txtPresentationButtonFloatingActionButton">MD - Button FAB</string>

    <!-- SingleLineTextFieldActivity -->
    <string name="txtPresentationTextField">MD - Text Field</string>
    <string name="txtLabelTextViewNormal">Normal</string>
    <string name="txtHintEditTextNormal">Hint Text - Normal</string>
    <string name="txtLabelTextViewFocus">Focus</string>
    <string name="txtHintEditTextFocus">Hint Text - Focus</string>
    <string name="txtLabelTextViewDisabled">Disabled</string>
    <string name="txtHintEditTextDisabled">Hint Text - Disabled</string>

    <!-- MultiLineTextFieldActivity -->
    <string name="txtPresentationMultilineTextField">MD - Multi Line Text Field</string>

    <!-- FullWidthTextField -->
    <string name="txtPresentationFullWidthTextField">MD - Full Width Text Field</string>
    <string name="txtHintFullWidthText">Hint Full Width Edit Text</string>

    <!-- FloatingLabelsActivity -->
    <string name="txtPresentationFloatingLabelsTextField">MD - Floating Labels</string>
    <string name="txtHintFloatingLabelsTextField">Title</string>
</resources>